@@ -42,4 +42,3 @@ sed -e 's/@s:es\([ >]\)/@s:spa\1/g' > $path/$fixedfile  # output to the path + n
 mv $path/$fixedfile $path/$filename  # replace the original file with the fixed file, giving a fixed .cha file
 
 # Also need to handle where @s is used without any language marker
-# Need to extend to handle "en." instead of "en ."
